--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@ahaganDEV/mdb-reader",
+    "name": "@ahagandev/mdb-reader",
     "version": "2.2.2",
     "description": "JavaScript library to read data from Access databases",
     "main": "lib/node/index.js",
